# cassandra

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  workspace.yaml
controles_laurentide_automations/: definitions.py
controles_laurentide_automations/assets/: daily_orderbook_asset.py  impact_partner_asset.py  rta_track_asset.py
controles_laurentide_automations/date_update_excel/: config.example.json  daily_orderbook_script.py  impact_partner_script.py  requirements.txt  rta_track_script.py  utils.py
controles_laurentide_data_lake/: assets.py  definitions.py  tables.py  utils.py
controles_laurentide_data_lake.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
controles_laurentide_data_lake/dlt_sources/: requirements.txt  salesforce_pipeline.py
controles_laurentide_data_mart/: definitions.py  resources.py
controles_laurentide_data_mart/assets/: dim_customer.py  dim_date.py  dim_kob.py  dim_part.py  dim_sales_invoice_line.py  dim_salesman.py  fact_cost_transaction.py  fact_sales_invoice.py  utils.py
controles_laurentide_data_warehouse/: definitions.py  resources.py
controles_laurentide_data_warehouse/assets/: accounting_cost_bd.py  company_bd.py  contacts.py  customer_equipment.py  customer_order.py  customer_service.py  customer_value.py  customers.py  doc_text.py  doc_text_bd.py  employee.py  expense_bd.py  expense_sheets.py  finance_bd.py  finance_cash_flow.py  finance_data.py  finance_transactions.py  financial_transactions.py  inventory_part.py  inventory_part_in_stock.py  inventory_transactions.py  inventory_value.py  invoicing.py  (+29 more)
(+1 files in other folders)
