[project]
name = "controles_laurentide_data_lake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "controles_laurentide_data_lake.definitions"
code_location_name = "controles_laurentide_data_lake"

[tool.setuptools.packages.find]
exclude=["controles_laurentide_data_lake_tests"]

[tool.dagster.workspace]
code_locations = ["controles_laurentide_data_lake", "controles_laurentide_data_warehouse"]

[tool.dagster.code_locations.controles_laurentide_data_lake]
module_name = "controles_laurentide_data_lake.definitions"

[tool.dagster.code_locations.controles_laurentide_data_warehouse]
module_name = "controles_laurentide_data_warehouse.definitions"

